--- a/index.html
+++ b/index.html
@@ -2,8 +2,10 @@
 <html>
 <head>
   <meta charset="UTF-8">
-  <title>Interactive CSV Example</title>
+  <title>BradPowerIndex</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <style>
+	  
 
 		.top-left {
 			position: fixed;
