--- a/index.html
+++ b/index.html
@@ -66,9 +66,7 @@
 
 		.twitter-timeline {
 			position: absolute;
-			top: 65%;
-			right: 0%;
-			transform: translate(-0%, -50%);
+			margin-right: 5px
 			width: 350px; /* Change the width to adjust the size */
 			height: 400px; /* Change the height to adjust the size */
 			z-index: 1; /* Set a higher z-index to position the timeline over the image */
