--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 		}
 
 		.twitter-timeline {
-			position: absolute;
+			display: block;
 			margin-right: 5px
 			width: 350px; /* Change the width to adjust the size */
 			height: 400px; /* Change the height to adjust the size */
