--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
 </head>
 <body>
 
-	<a href="https://www.youtube.com/watch?v=lf6-wi8lab0" target="_blank" class="top-left">TL</a>
+	<a href="brad.html" target="_blank" class="top-left">TL</a>
 	<a href="https://www.youtube.com/watch?v=lf6-wi8lab0" target="_blank" class="top-right">TR</a>
 
 
