--- a/brad.html
+++ b/brad.html
@@ -13,12 +13,12 @@
     
     
   html, body {
-    height: 100%;
+    height: 70%;
     margin: 0;
   }
 
   body {
-    background: black;
+    background: grey;
     display: flex;
     align-items: center;
     justify-content: center;
