--- a/brad.html
+++ b/brad.html
@@ -13,6 +13,15 @@
     
     
 
+	 html, body {
+			position: absolute;
+			top: 65%;
+			right: 0%;
+			transform: translate(-0%, -50%);
+			width: 350px; /* Change the width to adjust the size */
+			height: 400px; /* Change the height to adjust the size */
+			z-index: 1; /* Set a higher z-index to position the timeline over the image */
+		}
 
   body {
     background: grey;
