--- a/brad.html
+++ b/brad.html
@@ -21,13 +21,10 @@
 		}
 
   body {
-    background: grey;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+    background: white;
   }
   canvas {
-    border: 1px solid white;
+    border: 1px solid black;
   }
   </style>
 </head>
