--- a/brad.html
+++ b/brad.html
@@ -14,7 +14,7 @@
     
 
 	 html, body {
-			position: Center;
+			margin: 0 auto;
 			z-index: 1; /* Set a higher z-index to position the timeline over the image */
 		}
 
