--- a/index.html
+++ b/index.html
@@ -48,13 +48,13 @@
 			/* Set the font family for the <h1> element */
 		h1 {
 			font-family: 'Jockey One', sans-serif;
+			font-size: 50px;
 			text-align: center;
 			color: blue;
 			position: absolute;
 			top: 5%;
 			left: 50%;
 			transform: translate(-50%, -50%);
-			color: white;
 			text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.8);
 		}
 		img {
