--- a/index.html
+++ b/index.html
@@ -50,9 +50,9 @@
 			font-family: 'Jockey One', sans-serif;
 			font-size: 50px;
 			text-align: center;
-			color: blue;
+			color: white;
 			position: absolute;
-			top: 5%;
+			top: 9%;
 			left: 50%;
 			transform: translate(-50%, -50%);
 			text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.8);
