--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	  
 
 		.top-left {
-			position: fixed;
+			position: static;
 			top: 60px;
 			left: 20px;
   background-color: white;
@@ -27,13 +27,12 @@
 		}
 
 		.top-right {
-			position: fixed;
+			position: static;
 			top: 60px;
 			right: 20px;
   background-color: white;
   color: #333;
   border: 2px solid black;
-  border-radius: 50%;
   padding: 8px 12px;
   text-decoration: none;
   font-weight: bold;
