--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	  
 
 		.top-left {
-			position: static;
+			position: fixed;
 			top: 60px;
 			left: 20px;
   background-color: white;
@@ -27,7 +27,7 @@
 		}
 
 		.top-right {
-			position: static;
+			position: fixed;
 			top: 60px;
 			right: 20px;
   background-color: white;
