--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 
 	  #csv-data {
     margin-left: 5px;
-    width: 600px;
+    width: 900px;
   }
 
 #page-buttons {
@@ -77,6 +77,7 @@
 }
 	  
 	  	.twitter-timeline {
+			margin-right: 5px;
 			width: 350px; /* Change the width to adjust the size */
 			height: 400px; /* Change the height to adjust the size */
 			z-index: 1; /* Set a higher z-index to position the timeline over the image */
